# ascii-afo

./: .clang-format  CMakeLists.txt  LICENSE  README.md  ascii.hpp  ascii_afo.cpp  benchmark.cpp  benchmark.hpp  examples.cpp
tests/: gen_vectors.py  generated_vectors.hpp  test_ascii.cpp
tools/: run_perf.py
